tests/error/overload_errors/no_match_zero.err
Error: Invalid call of overloaded function (at $FILE:18:4)
   | 
16 | @guppy
17 | def main() -> None:
18 |     overloaded()
   |     ^^^^^^^^^^^^ No variant of overloaded function `overloaded` takes 0
   |                  arguments

Guppy compilation failed due to 1 previous error
